--- a/NotAuthorized/styleLocation.css
+++ b/NotAuthorized/styleLocation.css
@@ -7,7 +7,6 @@
   list-style: none;
   color: black;
   cursor: none;
-  color: #000;
   font-family: "DM Sans";
   font-size: 16px;
   font-style: normal;
@@ -18,19 +17,6 @@
 .li {
   list-style-type: none;
 }
-.link {
-  text-decoration: none;
-  list-style: none;
-  color: black;
-  cursor: none;
-  color: #000;
-  font-family: "DM Sans";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 12.802px; /* 80.01% */
-  text-transform: uppercase;
-}
 .body {
   max-width: 1440px;
   display: flex;
@@ -38,13 +24,11 @@
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
-  background: #f5ede7;
 }
 
 .header {
   width: 96.7%;
   height: 70px;
-  background: #f6ddca;
   display: flex;
   align-items: flex-end;
   padding: 16px 24px;
@@ -150,10 +134,62 @@
   left: 0;
 }
 
-.logIn {
-  width: 45px;
-  height: 30px;
-  margin-bottom: 30px;
+.theme-element.dayMode {
+  background: #f5ede7 !important;
+  color: #000 !important;
+}
+
+.theme-element.nightMode {
+  background: #261d18 !important;
+  color: #725d49 !important;
+}
+
+.theme-specialElement.nightMode {
+  background: #16110e !important;
+  color: #725d49 !important;
+}
+
+.theme-specialElement.dayMode {
+  background: #ffc3a0 !important;
+  color: #000 !important;
+}
+
+.theme-button.dayMode {
+  border: 1px solid #000 !important;
+}
+
+.theme-button.nightMode {
+  border: 1px solid #725d49 !important;
+  color: #725d49;
+}
+
+.theme-blueButton.dayMode {
+  border: 1px solid #0126de !important;
+  color: #0126de !important;
+}
+
+.theme-blueButton.nightMode {
+  border: 1px solid #5f74e2 !important;
+  color: #5f74e2 !important;
+  background: #16110e !important;
+}
+.switchers {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 5px;
+}
+.changeButton {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 34.002px; /* 154.553% */
+  border-radius: 15px;
 }
 .section {
   padding-top: 40px;
@@ -185,7 +221,6 @@
 }
 .textP {
   height: auto;
-  color: #000;
   font-family: "DM Sans";
   font-size: 13px;
   font-style: normal;
@@ -195,7 +230,6 @@
 }
 
 .textH1 {
-  color: #000;
   font-family: "DM Sans";
   font-size: 16px;
   font-style: normal;
@@ -233,17 +267,63 @@
   flex-wrap: wrap;
 }
 .map {
-  width: 90%;
+  width: 93.5%;
   height: auto;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
   flex-direction: row;
   gap: 70px;
-  padding: 55px;
+  padding: 48px;
   flex-wrap: wrap;
-  background: #f6ddcadc;
+}
+.img {
+  display: flex;
+}
+.unvisibleMap {
+  display: none;
 }
 .unvisibleImg {
   display: none;
+}
+@media screen and (max-width: 1210px) {
+  .header {
+    width: 94%;
+  }
+}
+@media screen and (max-width: 900px) {
+  .hamburger-menu {
+    visibility: visible;
+  }
+  .navigation {
+    display: none;
+  }
+  .text {
+    width: 80%;
+  }
+  .map {
+    padding: 20px 0px;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 840px) {
+  .unvisibleMap {
+    display: flex;
+  }
+  .visibleMap {
+    display: none;
+  }
+  .img {
+    display: none;
+  }
+}
+@media screen and (max-width: 701px) {
+  .logo {
+    display: none;
+  }
+  .header {
+    width: 92%;
+    padding: 16px;
+  }
 }
