--- a/Tarla/catalog.css
+++ b/Tarla/catalog.css
@@ -27,12 +27,12 @@
 }
 
 .header {
-  width: 96.7%;
+  width: 96%;
   height: 70px;
   background: #f6ddcadc;
   display: flex;
   align-items: flex-end;
-  padding: 16px 24px;
+  padding: 16px;
   flex-direction: row;
   justify-content: flex-start;
   gap: 16px;
@@ -138,17 +138,17 @@
   visibility: visible;
   left: 0;
 }
-.section{
+.section {
   width: 85%;
   padding: 20px;
   height: auto;
   gap: 20px;
-display: flex;
-justify-content: center;
-align-content: flex-start;
-flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-content: flex-start;
+  flex-direction: column;
 }
-.divLeftYoRight{
+.div {
   width: 60%;
   padding: 10px 35px;
   display: flex;
@@ -158,13 +158,11 @@ flex-direction: column;
   text-align: justify;
   gap: 10px;
 }
-
-.card{
+.card {
   width: 100%;
-  height: auto;
-  padding: 10px 15px;
+  padding: 10px;
   display: flex;
-  justify-content:center;
+  justify-content: center;
   align-content: flex-start;
   flex-direction: row;
 }
@@ -177,8 +175,7 @@ flex-direction: column;
   justify-content: center;
   gap: 30px;
 }
-.baseText{
-  width: 60%;
+.baseText {
   text-align: justify;
   font-family: "DM Sans";
   font-size: 18px;
@@ -186,12 +183,12 @@ flex-direction: column;
   font-weight: 400;
   line-height: 28.008px;
 }
-.mainText{
+.mainText {
   width: 320px;
   text-align: center;
   font-family: "DM Sans";
   font-size: 22px;
-  font-style:oblique;
+  font-style: oblique;
   font-weight: 400;
   line-height: 28.008px;
 }
@@ -204,19 +201,22 @@ flex-direction: column;
   align-items: center;
   gap: 10px;
 }
-.delivery{
+.unvisible {
+  display: none;
+}
+.delivery {
   width: 95%;
   height: auto;
   padding: 40px 0px 10px 0px;
-display: flex;
-flex-direction: row;
-align-content: center;
-gap: 20px;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
 }
-.divDelivery{
-  width: 30%;
+.divDelivery {
+  max-width: 350px;
   height: auto;
-  
 }
 .divfooter {
   width: 60%;
@@ -225,6 +225,7 @@ gap: 20px;
   justify-content: space-around;
   align-items: center;
   flex-direction: row;
+  gap: 20px;
   flex-wrap: wrap;
 }
 @media screen and (max-width: 900px) {
@@ -232,6 +233,48 @@ gap: 20px;
     visibility: visible;
   }
   .navigation {
-    visibility: hidden;
+    display: none;
+  }
+  .header {
+    padding: 16px 10px;
+  }
+}
+@media screen and (max-width: 1440px) {
+  .img {
+    display: none;
+  }
+}
+@media screen and (max-width: 1150px) {
+  .card {
+    flex-direction: column;
+  }
+  .div {
+    width: 80%;
+  }
+  .unvisible {
+    display: flex;
+  }
+  .visible {
+    display: none;
+  }
+}
+@media screen and (max-width: 607px) {
+  .unvisible {
+    display: none;
+  }
+  .div {
+    width: 90%;
+    padding: 10px;
+  }
+}
+@media screen and (max-width: 510px) {
+  .logo {
+    display: none;
+  }
+  .header {
+    width: 94%;
+  }
+  .mainText {
+    width: 100%;
   }
 }
