--- a/NotAuthorized/styleLocation.css
+++ b/NotAuthorized/styleLocation.css
@@ -49,8 +49,10 @@
   visibility: visible;
   margin: 0px;
 }
+
+
 .hamburger-menu {
-  display: none;
+  visibility: hidden;
 }
 
 /* скрываем чекбокс */
@@ -96,7 +98,7 @@
   right: -100%;
   /*left: -100%;*/
   width: 250px;
-  height: 17%;
+  height: 12%;
   margin: 0;
   padding: 80px 0;
   list-style: none;
@@ -133,7 +135,6 @@
   visibility: visible;
   left: 0;
 }
-
 
 .section {
   padding-top: 40px;
@@ -205,6 +206,7 @@
   width: 60%;
   height: auto;
   display: flex;
+  gap: 20px;
   justify-content: space-around;
   align-items: center;
   flex-direction: row;
@@ -230,11 +232,7 @@
 .unvisibleImg {
   display: none;
 }
-@media screen and (max-width: 1210px) {
-  .header {
-    width: 94%;
-  }
-}
+
 @media screen and (max-width: 900px) {
   .hamburger-menu {
     visibility: visible;
@@ -250,7 +248,11 @@
     width: 100%;
   }
 }
-
+@media screen and (max-width: 1210px) {
+  .header {
+    width: 94%;
+  }
+}
 @media screen and (max-width: 840px) {
   .unvisibleMap {
     display: flex;
