--- a/NotAuthorized/popup.css
+++ b/NotAuthorized/popup.css
@@ -2,20 +2,23 @@
   margin: 0 auto;
   padding: 0;
 }
-/*.popup {
+.popup {
   position: fixed;
   width: 100%;
   height: 100%;
-  background-color: #140c08d8;
+  background-color: #140c08dd;
   top: 0;
   left: 0;
   opacity: 0;
   visibility: hidden;
   transition: all 0.8s ease 0s;
-}*/
-.popupAuthorization{
-  width: 40px;
-  height: 40px;
+  z-index: 1000;
+}
+.popupAuthorization {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .popup.open {
   opacity: 1;
@@ -33,41 +36,53 @@
   padding: 30px 10px;
 }
 .popupContent {
-  background: #f6ddcadc;
-  color: rgb(22, 14, 7);
+  background:#f5ede7;
+  color: #140c08;
   max-width: 600px;
   padding: 20px;
   height: 170px;
   position: relative;
+
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 35px;
 }
 .form {
   background-color: #6e7a5a;
   padding: 20px;
-  border-radius: 8px;
   box-shadow: 0 0 10px rgba(40, 36, 28, 0.952);
 }
 input[type="text"],
-input[type="password"],
-.AuthorizationButton {
+input[type="password"] {
   width: 100%;
   margin-bottom: 10px;
   padding: 10px;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius:  15px;
   box-sizing: border-box;
   font-size: 16px;
 }
 .authorizationButton {
-  background-color: #4caf50;
-  color: white;
+  border: 1px solid #0126de !important;
+  color: #0126de !important;
   cursor: pointer;
+  width: 150px;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 34.002px; /* 154.553% */
+  border-radius: 35px;
 }
 .popupClose {
   position: absolute;
-  right: 10px;
-  top: 10px;
-  font-size: 20px;
-  color: rgb(22, 14, 7);
+  right: 20px;
+  top: 5px;
+  font-size: 27px;
+  color: #140c08;
   text-decoration: none;
 }
 body.lock {
