--- a/changeColor.css
+++ b/changeColor.css
@@ -7,7 +7,18 @@
     background: #261d18 !important;
     color: #725d49 !important;
   }
-  
+  .dayPhoto.dayMode {
+   display: flex;
+  }
+  .dayPhoto.nightMode {
+    display: none;
+   }
+   .nightPhoto.dayMode {
+    display: none;
+   }
+   .nightPhoto.nightMode {
+     display: flex;
+    }
   .theme-specialElement.nightMode {
     background: #1d1612 !important;
     color: #725d49 !important;
@@ -64,10 +75,10 @@
     border-radius: 15px;
    }
    .logIn{
-    width: 48px;
-    height: 48px;
+    width: 40px;
+    height: 40px;
     padding: 0px;
-    font-size: 17px;
+    font-size: 12px;
     font-style: normal;
     font-weight: 400;
     line-height: 34.002px; /* 154.553% */
