--- a/NotAuthorized/popup.css
+++ b/NotAuthorized/popup.css
@@ -2,7 +2,7 @@
   margin: 0 auto;
   padding: 0;
 }
-.popup {
+.popup, .popup2 {
   position: fixed;
   width: 100%;
   height: 100%;
@@ -14,13 +14,14 @@
   transition: all 0.8s ease 0s;
   z-index: 1000;
 }
-.popupAuthorization {
+.popupAuthorization,
+.popupRegistration {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.popup.open {
+.popup.open, .popup2.open {
   opacity: 1;
   visibility: visible;
 }
@@ -36,7 +37,7 @@
   padding: 30px 10px;
 }
 .popupContent {
-  background:#f5ede7;
+  background: #f5ede7;
   color: #140c08;
   max-width: 600px;
   padding: 20px;
@@ -60,7 +61,7 @@ input[type="password"] {
   margin-bottom: 10px;
   padding: 10px;
   border: 1px solid #ccc;
-  border-radius:  15px;
+  border-radius: 15px;
   box-sizing: border-box;
   font-size: 16px;
 }
@@ -77,7 +78,7 @@ input[type="password"] {
   line-height: 34.002px; /* 154.553% */
   border-radius: 35px;
 }
-.popupClose {
+.popupClose{
   position: absolute;
   right: 20px;
   top: 5px;
